# stat-fastapi

./: .gitignore  README.md  conftest.py  makefile  pyproject.toml
stat_fastapi/: __dev__.py  api.py  conftest.py
stat_fastapi/backend/: mock.py  protocol.py
stat_fastapi/backend/mock/: __init__.py  backend.py  models.py  order_test.py  repository.py  settings.py
stat_fastapi/models/: datetime.py  datetime_test.py  opportunity.py  order.py  product.py  shared.py
stat_fastapi/tests/: conftest.py  opportunity_test.py  order_test.py  product_test.py  root_test.py  utils.py
stat_fastapi_landsat/: backend.py
